# Dynamic-Voice-Channels

./: flake.nix  pyproject.toml
src/: main.py
src/bot/: client.py
src/bot/ext/: blacklist.py  bot.py  default.py  dvc.py  help.py
