[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "discord-bot"
version = "1.0.0"
description = "My Discord Bot"
requires-python = ">=3.8"
dependencies = [
    "disnake",
    "psutil"
]

[project.scripts]
dynamic-channel-bot = "main:main"
